Fix broken styles on readme files

--- a/less/main.less
+++ b/less/main.less
@@ -1,35 +1,35 @@
 .file div.blob-wrapper .highlight, // source file
 .file .diff-line-code, // commit diff
 #files .blame .file-code, // blame
-div.gist table.highlight, //gist
-#readme .highlight pre {
+div.gistktable.highlight, //gist
+.readme .markdown-body .highlight pre {
   color: @text; 
   background-color: @background; /* Background color */
 }
 
 .file td.blob-code { color: @text; } /* Plain text */
 .file .blob-num { color: @lineNums; } /* Line numbers */
-.file span.c,  div.gist span.c,  #readme span.c  { color: @comment; } /* Comment */
-.file span.c1, div.gist span.c1, #readme span.c1 { color: @comment; } /* Single line comment */
-.file span.cm, div.gist span.cm, #readme span.cm { color: @comment; } /* Multi line comment */
-.file span.kd, div.gist span.kd, #readme span.kd { color: @keywordDef; } /* Keyword definition? */
-.file span.pi, div.gist span.pi, #readme span.pi { color: @punctuation; } /* Punctuation */
-.file span.o,  div.gist span.o,  #readme span.o  { color: @operator; } /*Operators */
-.file span.oi, div.gist span.oi, #readme span.oi { color: @operator; } /* Operators */
-.file span.nt, div.gist span.nt, #readme span.nt { color: @nt; } /* Not sure - used for html tag? */
-.file span.s1, div.gist span.s1, #readme span.s1 { color: @string; } /* Single string */
-.file span.s2, div.gist span.s2, #readme span.s2 { color: @string; } /* Double string */
-.file span.nx, div.gist span.nx, #readme span.nx { color: @other; } /* Other */
-.file span.k,  div.gist span.k,  #readme span.k  { color: @keyword; } /* Keyword */
-.file span.kc, div.gist span.kc, #readme span.kc { color: @keyword; } /* Keyword constant */
-.file span.kp, div.gist span.kp, #readme span.kp { color: @keyword2; } /* Keyword something, like true/false */
-.file span.kt, div.gist span.kt, #readme span.kt { color: @type; } /* Return type */
-.file span.nc, div.gist span.nc, #readme span.nc { color: @class; } /* Class name */
-.file span.nn, div.gist span.nn, #readme span.nn { color: @namespace; } /* Namespace name */
-.file span.n,  div.gist span.n,  #readme span.n  { color: @name; } /* Name */
-.file span.nb, div.gist span.nb, #readme span.nb { color: @method; } /* Method names? */
-.file span.nf, div.gist span.nf, #readme span.nf { color: @inherited; } /* Inherited class */
-.file span.ss, div.gist span.ss, #readme span.ss { color: @ss; } /* Ruby hash */
-.file span.no, div.gist span.no, #readme span.no { color: @local; } /* Object local */
-.file span.bp, div.gist span.bp, #readme span.bp { color: @bp; } /* Not sure  */
-.file span.p,  div.gist span.p,  #readme span.p  { color: @paren; } /* Parenthesis */
+.file span.c,  div.gist span.c,  .readme span.c  { color: @comment; } /* Comment */
+.file span.c1, div.gist span.c1, .readme span.c1 { color: @comment; } /* Single line comment */
+.file span.cm, div.gist span.cm, .readme span.cm { color: @comment; } /* Multi line comment */
+.file span.kd, div.gist span.kd, .readme span.kd { color: @keywordDef; } /* Keyword definition? */
+.file span.pi, div.gist span.pi, .readme span.pi { color: @punctuation; } /* Punctuation */
+.file span.o,  div.gist span.o,  .readme span.o  { color: @operator; } /*Operators */
+.file span.oi, div.gist span.oi, .readme span.oi { color: @operator; } /* Operators */
+.file span.nt, div.gist span.nt, .readme span.nt { color: @nt; } /* Not sure - used for html tag? */
+.file span.s1, div.gist span.s1, .readme span.s1 { color: @string; } /* Single string */
+.file span.s2, div.gist span.s2, .readme span.s2 { color: @string; } /* Double string */
+.file span.nx, div.gist span.nx, .readme span.nx { color: @other; } /* Other */
+.file span.k,  div.gist span.k,  .readme span.k  { color: @keyword; } /* Keyword */
+.file span.kc, div.gist span.kc, .readme span.kc { color: @keyword; } /* Keyword constant */
+.file span.kp, div.gist span.kp, .readme span.kp { color: @keyword2; } /* Keyword something, like true/false */
+.file span.kt, div.gist span.kt, .readme span.kt { color: @type; } /* Return type */
+.file span.nc, div.gist span.nc, .readme span.nc { color: @class; } /* Class name */
+.file span.nn, div.gist span.nn, .readme span.nn { color: @namespace; } /* Namespace name */
+.file span.n,  div.gist span.n,  .readme span.n  { color: @name; } /* Name */
+.file span.nb, div.gist span.nb, .readme span.nb { color: @method; } /* Method names? */
+.file span.nf, div.gist span.nf, .readme span.nf { color: @inherited; } /* Inherited class */
+.file span.ss, div.gist span.ss, .readme span.ss { color: @ss; } /* Ruby hash */
+.file span.no, div.gist span.no, .readme span.no { color: @local; } /* Object local */
+.file span.bp, div.gist span.bp, .readme span.bp { color: @bp; } /* Not sure  */
+.file span.p,  div.gist span.p,  .readme span.p  { color: @paren; } /* Parenthesis */
