--- a/src/themes/sidetracked.css
+++ b/src/themes/sidetracked.css
@@ -2,8 +2,8 @@
 .file div.blob-wrapper .highlight,
 .file .diff-line-code,
 #files .blame .file-code,
-div.gist table.highlight,
-#readme .highlight pre {
+div.gistktable.highlight,
+.readme .markdown-body .highlight pre {
   color: #f8f8f8;
   background-color: #191919;
   /* Background color */
@@ -19,145 +19,145 @@ div.gist table.highlight,
 /* Line numbers */
 .file span.c,
 div.gist span.c,
-#readme span.c {
+.readme span.c {
   color: #554930;
 }
 /* Comment */
 .file span.c1,
 div.gist span.c1,
-#readme span.c1 {
+.readme span.c1 {
   color: #554930;
 }
 /* Single line comment */
 .file span.cm,
 div.gist span.cm,
-#readme span.cm {
+.readme span.cm {
   color: #554930;
 }
 /* Multi line comment */
 .file span.kd,
 div.gist span.kd,
-#readme span.kd {
+.readme span.kd {
   color: #c87936;
 }
 /* Keyword definition? */
 .file span.pi,
 div.gist span.pi,
-#readme span.pi {
+.readme span.pi {
   color: #f8f8f8;
 }
 /* Punctuation */
 .file span.o,
 div.gist span.o,
-#readme span.o {
+.readme span.o {
   color: #f8f8f8;
 }
 /*Operators */
 .file span.oi,
 div.gist span.oi,
-#readme span.oi {
+.readme span.oi {
   color: #f8f8f8;
 }
 /* Operators */
 .file span.nt,
 div.gist span.nt,
-#readme span.nt {
+.readme span.nt {
   color: #d8b778;
 }
 /* Not sure - used for html tag? */
 .file span.s1,
 div.gist span.s1,
-#readme span.s1 {
+.readme span.s1 {
   color: #7a9b24;
 }
 /* Single string */
 .file span.s2,
 div.gist span.s2,
-#readme span.s2 {
+.readme span.s2 {
   color: #7a9b24;
 }
 /* Double string */
 .file span.nx,
 div.gist span.nx,
-#readme span.nx {
+.readme span.nx {
   color: #f8f8f8;
 }
 /* Other */
 .file span.k,
 div.gist span.k,
-#readme span.k {
+.readme span.k {
   color: #af662f;
 }
 /* Keyword */
 .file span.kc,
 div.gist span.kc,
-#readme span.kc {
+.readme span.kc {
   color: #af662f;
 }
 /* Keyword constant */
 .file span.kp,
 div.gist span.kp,
-#readme span.kp {
+.readme span.kp {
   color: #f8f8f8;
 }
 /* Keyword something, like true/false */
 .file span.kt,
 div.gist span.kt,
-#readme span.kt {
+.readme span.kt {
   color: #af662f;
 }
 /* Return type */
 .file span.nc,
 div.gist span.nc,
-#readme span.nc {
+.readme span.nc {
   color: #6489af;
 }
 /* Class name */
 .file span.nn,
 div.gist span.nn,
-#readme span.nn {
+.readme span.nn {
   color: #6489af;
 }
 /* Namespace name */
 .file span.n,
 div.gist span.n,
-#readme span.n {
+.readme span.n {
   color: #6489af;
 }
 /* Name */
 .file span.nb,
 div.gist span.nb,
-#readme span.nb {
+.readme span.nb {
   color: #f8f8f8;
 }
 /* Method names? */
 .file span.nf,
 div.gist span.nf,
-#readme span.nf {
+.readme span.nf {
   color: #f8f8f8;
 }
 /* Inherited class */
 .file span.ss,
 div.gist span.ss,
-#readme span.ss {
+.readme span.ss {
   color: #f8f8f8;
 }
 /* Ruby hash */
 .file span.no,
 div.gist span.no,
-#readme span.no {
+.readme span.no {
   color: #f8f8f8;
 }
 /* Object local */
 .file span.bp,
 div.gist span.bp,
-#readme span.bp {
+.readme span.bp {
   color: #f8f8f8;
 }
 /* Not sure  */
 .file span.p,
 div.gist span.p,
-#readme span.p {
+.readme span.p {
   color: #ffffff;
 }
 /* Parenthesis */
